Implement Fuzzy Finder
